# tl-prototype

./: .flake8  .gitignore  README.md  config.toml.dist  pyproject.toml  setup.py  time_log.py  tl.py
time_log/: __main__.py
