[tool.poetry]
name = "time_log"
version = "0.1.0"
description = "Prototype for a time tracker/logger command line utility"
authors = ["Max Resing <max.resing@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
yacf = "^1.1.0"
pretty-tables = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
