[tool.poetry]
name = "time_log"
version = "0.1.6"
description = "Prototype for a time tracker/logger command line utility"
authors = ["Max Resing <max.resing@protonmail.com>"]
maintainers = ["Max Resing <max.resing@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/resingm/tl-prototype"
repository = "https://github.com/resingm/tl-prototype"
documentation = "https://github.com/resingm/tl-prototype"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]
include = ["config.toml.dist"]

[tool.poetry.dependencies]
python = "^3.9"
yacf = "^1.1.0"
pretty-tables = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/resingm/tl-prototype/issues"

[tool.poetry.scripts]
tl = 'time_log:main'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

